syntax = "proto3";
package lavanet.lava.conflict;

option go_package = "github.com/lavanet/lava/v4/x/conflict/types";
import "gogoproto/gogo.proto";
import "lavanet/lava/pairing/relay.proto";


message ResponseConflict { 
    ConflictRelayData conflictRelayData0 = 1;
    ConflictRelayData conflictRelayData1 =2;
}

message ConflictRelayData {
    lavanet.lava.pairing.RelayRequest request = 1;
    reserved 2;
    ReplyMetadata reply= 3;
}

message ReplyMetadata {
    bytes hash_all_data_hash = 1 ;
    bytes sig = 2;
    int64 latest_block = 3;
    bytes finalized_blocks_hashes = 4;
    bytes sig_blocks = 5; 
}

message FinalizationConflict {
    RelayFinalization relay_finalization_0 = 1;
    RelayFinalization relay_finalization_1 = 2;
}

message RelayFinalization {
    bytes finalized_blocks_hashes = 1;
    int64 latest_block = 2;
    string consumer_address = 3;
    lavanet.lava.pairing.RelaySession relay_session = 4;
    bytes sig_blocks = 5;
}